--- a/css/railsgirls.css
+++ b/css/railsgirls.css
@@ -210,3 +210,6 @@ body {
   0%   { transform: rotate(0deg); }
   100% { transform: rotate(359deg); }
 }
+
+.logo .reveal .state-background {
+   background-color: #dd380c; }
